hphp/test/zend/bad/zend/closure_022.php.expectf
Catchable fatal error: Closure object cannot have properties in %sclosure_022.php on line 5